--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -11,7 +11,6 @@
     z-index: 10;
     width: 100vw;
     border-bottom: 3px solid var(--navbar-background-color);
-    overflow: visible;
 }  
 
 .navbar-navContainer {
@@ -33,11 +32,6 @@
     align-items: center;
     margin-left: 2rem;
     text-decoration: none;
-}
-
-.navbar-listContainer {
-    overflow: visible;
-    position: relative;
 }
 
 .navbar-navList {
